increased menu-button clicking area. bug: icon small in phone browser

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -54,14 +54,12 @@ section#home {
       width: inherit;
     }
     button#menu-button{
-     background: none;
-      cursor:pointer;
-      border:none;
-      width:29px;
-      height:29px;
+      background: none;
+      cursor: pointer;
+      border: none;
+      border: 0px;
       display: inline-block; 
-      margin: 0px; 
-      padding: 0px;
+      padding: 0 0 20px 20px !important; // increased clicking area
       font-size: 1.5em;
     }
     button#menu-button:active{
